--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ NetBeansProjects/PI3/target
 target/*.jsp
 target
 NetBeansProjects/PI3/target/*.jsp
+NetBeansProjects/PI3/target/PI3-1.1.0-SNAPSHOT/WEB-INF/login.jsp
