Finalizando a validação de senha do login

--- a/NetBeansProjects/PI3/src/main/webapp/WEB-INF/web.xml
+++ b/NetBeansProjects/PI3/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,6 @@
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>menu-principal</welcome-file>
+        <welcome-file>Login</welcome-file>
     </welcome-file-list>
 </web-app>
